<resources>
    <string name="app_name">FastQuiz</string>
    <string name="newPlayer">NEW PLAYER</string>
    <string name="startNewGame">New game</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="ready">Ready ?</string>
    <string name="menu">MENU</string>
    <string name="restart">RESTART</string>
    <string name="startScore">0</string>
    <string name="menuItem1">Settings</string>
    <string name="menuItem2">Questions</string>
    <string name="menuItem3">About</string>
    <string name="delay">Set delay:</string>
    <string name="questions">Set number of questions:</string>
    <string name="bt_apply">Apply</string>
</resources>