<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/newPlayer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/orange"
        android:text="@string/newPlayer" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playerName1"
        android:layout_marginTop="25dp"
        android:gravity="bottom"
        android:hint="@string/player1"
        android:inputType="text"
        android:visibility="invisible"
        android:enabled="false"
        android:autofillHints="">
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playerName2"
        android:layout_marginTop="25dp"
        android:gravity="bottom"
        android:hint="@string/player2"
        android:inputType="text"
        android:visibility="invisible"
        android:enabled="false"
        android:autofillHints="">
    </EditText>

    <Button
        android:id="@+id/newGame"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/orange"
        android:text="@string/startNewGame"
        android:visibility="invisible"
        android:enabled="false"/>
</LinearLayout>